@@ -14,6 +14,11 @@ To find out what should go in this file, see "Information For
 Maintainers of GNU Software" (maintain.texi), the section called
 "Recording Changes".
 
+<b>Dave Trollope</b>:
+Memroy management clean up patches.
+
+<b>Daniel Henninger</b>:
+Timeout feature in FvwmForm.
 
 <b>Suzanne Britton</b>:
 Multi-pixmap titlebars patch.
@@ -165,7 +170,7 @@ BackingStore/BackingStoreOff and SaveUnder/SaveUnderOff, more WindowList
 enhancements, look of sticky icons, WindowList menu style, PointerKey command,
 several FvwmTheme options, FvwmTheme parsing, styles Font and IconFont,
 introduced the decor_w, smooth window shading, smooth (well, sort of) opaque
-resizing, many many more bugfixes.
+resizing, many many more bugfixes. Lost motivation to continue this list.
 
 <b>A.J. Weber</b>:
 SnapAttraction patch.
@@ -283,8 +288,9 @@ Randall Winchester
 Bo Yang
 </pre>
     <hr>
+Last updated on 31 March 2002, 21:00 (GMT +0000)
 <!-- This file automatically generated by txt2html.sh
-     on Sun Mar 10 11:05:22 CET 2002 -->
+     on Sun Mar 31 23:00:30 CEST 2002 -->
   </body>
 </html>
 
