@@ -2306,8 +2306,9 @@ A: OK, 93 is a joke, we know you don't have 93 buttons, but we've
    enable this functionality.  These applications may be run under FVWM.
 </pre>
     <hr>
+Last updated on 31 March 2002, 21:00 (GMT +0000)
 <!-- This file automatically generated by txt2html.sh
-     on Sun Mar 10 11:05:26 CET 2002 -->
+     on Sun Mar 31 23:00:31 CEST 2002 -->
   </body>
 </html>
 
