@@ -15,9 +15,11 @@ Note, the changes for the last STABLE release start with release
 
 <b>Changes in alpha release 2.5.1 (not released yet)</b>
 
+* FvwmForm can automatically run commands after a timeout interval.
+
 * New commands Schedule and Deschedule.
 
-* New command State,  New conditions State and !State.
+* New command State.  New conditions State and !State.
 
 * New commands XSync and XSynchronize for debugging purposes.
 
@@ -38,8 +40,6 @@ Note, the changes for the last STABLE release start with release
 * Added anti-aliased text rendering support using Xft (use --enable-xft
   to enable it). Recent versions of XFree and freetype2 are needed (see
   the FONT NAMES AND FONT LOADING section of the fvwm2 manual page).
-
-* New conditional command ThisWindow.
 
 * Conditional commands now have a return code (Match, NoMatch or
   Error).  This return code can be checked and tied to an action
@@ -65,6 +65,20 @@ Note, the changes for the last STABLE release start with release
 
 * The Current command does not select a random window when no
   window has the focus.
+
+* New colour '@4' (transparent) in button vectors.
+
+* New option "Frame" for the Resize and ResizeMove commands.
+
+* Added direction options to WindowShade command.  Windows can be
+  shaded in any of the eight compass directions.
+
+* Styles WindowShadeLazy (default), WindowShadeBusy and
+  WindowShadeAlwaysLazy to optimize performance of the WindowShade
+  command.
+
+* The DO_START_ICONIC flag is no longer supported in the module
+  interface.
 
 <b>Changes in alpha release 2.5.0 (27-Jan-2002)</b>
 
@@ -2126,8 +2140,9 @@ pl1 to pl2
 2.0 The beginning of time.
 </pre>
     <hr>
+Last updated on 31 March 2002, 21:00 (GMT +0000)
 <!-- This file automatically generated by txt2html.sh
-     on Sun Mar 10 11:05:18 CET 2002 -->
+     on Sun Mar 31 23:00:32 CEST 2002 -->
   </body>
 </html>
 
