@@ -46,6 +46,7 @@ $1 | perl -pe ' \
 # make footer:
 echo "</pre>
     <hr>
+Last updated on `date -u +"%d %B %Y, %H:%M (GMT %z)"`
 <!-- This file automatically generated by txt2html.sh
      on `date` -->
   </body>
