@@ -1,3 +1,8 @@
+2002-03-31  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* generated/txt2html.sh (outfile):
+	automatically insert the "last updated" date at the end
+
 2002-03-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
